[mobile][fix] uploaded images not visible

--- a/frappe/public/less/page.less
+++ b/frappe/public/less/page.less
@@ -58,7 +58,7 @@
 		width: 46px;
 		height: 0;
 		padding: 23px 0;
-		background-size: cover;
+		background-size: contain;
 		background-repeat: no-repeat;
 		background-position: center center;
 		border-radius: 4px;
